--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -16,5 +16,6 @@
 @import "blog/card_blogs";
 @import "blog/show_blog";
 @import "devise/devise_edit";
-@import "booking-button";
+@import "booking/booking-button";
 @import "card_teacher";
+@import "booking/bookings";
