--- a/app/assets/stylesheets/components/devise/_devise_edit.scss
+++ b/app/assets/stylesheets/components/devise/_devise_edit.scss
@@ -35,7 +35,7 @@
           background-color: rgba(255, 255, 255, 0.15);
         }
 
-        .active {
+        .opcione {
             background-color: white;
             color: #225191;
         }
@@ -60,6 +60,13 @@
   font-weight: 600;
   line-height: normal;
 }
+
+.opcion {
+  background-color: white;
+  color: #000000; 
+}
+
+
 
 
 
