--- a/app/views/devise/registrations/_profile_table.html.erb
+++ b/app/views/devise/registrations/_profile_table.html.erb
@@ -5,15 +5,15 @@
 
   <div class="row">
     <aside class="col-md-2 styles-sidebar">
-      <button data-action="click->profile#showAcerca">Acerca de mí</button>
-      <button data-action="click->profile#showIdiomas">Idiomas</button>
-      <button data-action="click->profile#showCertificados">Certificados</button>
-      <button data-action="click->profile#showDescripcion">Descripción</button>
-      <button data-action="click->profile#showSiguiendo">Siguiendo</button>
-      <button data-action="click->profile#showDisponibilidad">Disponibilidad</button>
-      <button data-action="click->profile#showVisitantes">Visitantes</button>
-      <button data-action="click->profile#showTarifas">Tarifas</button>
-      <button data-action="click->profile#showAjustes">Ajustes</button>
+      <button data-action="click->profile#showAcerca" class="opcion">Acerca de mí</button>
+      <button data-action="click->profile#showIdiomas" class="opcion">Idiomas</button>
+      <button data-action="click->profile#showCertificados" class="opcion">Certificados</button>
+      <button data-action="click->profile#showDescripcion" class="opcion">Descripción</button>
+      <button data-action="click->profile#showSiguiendo" class="opcion">Siguiendo</button>
+      <button data-action="click->profile#showDisponibilidad" class="opcion">Disponibilidad</button>
+      <button data-action="click->profile#showVisitantes" class="opcion">Visitantes</button>
+      <button data-action="click->profile#showTarifas" class="opcion">Tarifas</button>
+      <button data-action="click->profile#showAjustes" class="opcion">Ajustes</button>
       <button>Cerrar sesión</button>
     </aside>
     <div class="col-md-10">
