--- a/app/assets/stylesheets/components/blog/_show_blog.scss
+++ b/app/assets/stylesheets/components/blog/_show_blog.scss
@@ -11,6 +11,8 @@
 
     .banner-blog{
       position: relative;
+      box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+      border-radius: 16px;
       img{
         width: 100%;
         height: 400px;
@@ -18,6 +20,10 @@
         border-radius: 16px;
       }
       h2{
+        text-align: center;
+        border-radius: 8px;
+        padding: 8px;
+        background: rgba(0, 0, 0, 0.10);
         color: #FFF;
         text-shadow: 0px 8px 16px rgba(0, 0, 0, 0.50);
         font-family: Roboto;
@@ -41,12 +47,16 @@
       font-style: normal;
       font-weight: 400;
       line-height: normal;
-      margin: 24px;
+      margin: 32px 0px 32px 0px;
     }
 
     .card-blog{
       display: flex;
       align-items: flex-start;
+      margin: 16px 0px 32px 0px;
+      align-items: center;
+      border-radius: 16px;
+      box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
 
       img {
         margin: 8px;
