--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
             <%= link_to "Encuentra un profesor", teachers_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Chat", "#", class: "nav-link" %>
+            <%= link_to "Chat", chatrooms_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Mis clases", bookings_path, class: "nav-link" %>
