--- a/app/assets/stylesheets/components/_card_students.scss
+++ b/app/assets/stylesheets/components/_card_students.scss
@@ -52,7 +52,7 @@
 .card-community .info h2 {
   align-self: stretch; /* Estira el título horizontalmente para ocupar todo el ancho del contenedor */
   color: var(--Texto-tandem, #575966); /* Color del texto con fallback */
-  font-family: Roboto; /* Tipo de fuente */
+  font-family: Amazon Ember; /* Tipo de fuente */
   font-size: 18px; /* Tamaño de la fuente */
   font-style: normal; /* Estilo de la fuente */
   font-weight: 400; /* Peso de la fuente */
@@ -63,7 +63,7 @@
 .card-community .info p {
   align-self: stretch; /* Estira el párrafo horizontalmente para ocupar todo el ancho del contenedor */
   color: var(--Texto-tandem, #575966); /* Color del texto con fallback */
-  font-family: Roboto; /* Tipo de fuente */
+  font-family: Amazon Ember; /* Tipo de fuente */
   font-size: 14px; /* Tamaño de la fuente */
   font-style: normal; /* Estilo de la fuente */
   font-weight: 400; /* Peso de la fuente */
@@ -85,7 +85,7 @@
 
 .card-community .languague-community p {
   color: var(--Texto-tandem, #575966); /* Color del texto con fallback */
-  font-family: Roboto; /* Tipo de fuente */
+  font-family: Amazon Ember; /* Tipo de fuente */
   font-size: 9px; /* Tamaño de la fuente */
   font-style: normal; /* Estilo de la fuente */
   line-height: 1; /* Altura de línea */
