--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -17,5 +17,5 @@
 @import "blog/show_blog";
 @import "devise/devise_edit";
 @import "booking/booking-button";
-@import "card_teacher";
+@import "user/card_teacher";
 @import "booking/bookings";
