--- a/app/assets/stylesheets/components/blog/_card_blogs.scss
+++ b/app/assets/stylesheets/components/blog/_card_blogs.scss
@@ -21,7 +21,7 @@
 
   .tips{
     color: rgba(57, 181, 74, 1);
-    font-family: Roboto;
+    font-family: Amazon Ember;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -31,7 +31,7 @@
 
   h2{
     color: var(--Texto-tandem, #575966);
-    font-family: Roboto;
+    font-family: Amazon Ember;
     font-size: 22px;
     font-style: normal;
     font-weight: 500;
@@ -41,7 +41,7 @@
 
   p{
     color: var(--Texto-tandem, #575966);
-    font-family: Roboto;
+    font-family: Amazon Ember;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
