--- a/app/assets/stylesheets/components/devise/_devise_edit.scss
+++ b/app/assets/stylesheets/components/devise/_devise_edit.scss
@@ -20,7 +20,7 @@
         gap: 4px;
         border-radius: 50px;
         color: #FFF;
-        font-family: Roboto;
+        font-family: Amazon Ember;
         font-size: 18px;
         font-style: normal;
         font-weight: 600;
@@ -54,7 +54,7 @@
 .descripcion-edit{
   margin-bottom: 48px;
   color: #FFF;
-  font-family: Roboto;
+  font-family: Amazon Ember;
   font-size: 32px;
   font-style: normal;
   font-weight: 600;
