--- a/app/assets/stylesheets/components/perfil/_info_users.scss
+++ b/app/assets/stylesheets/components/perfil/_info_users.scss
@@ -8,7 +8,7 @@
   justify-content: center; /* Centra los elementos a lo largo del eje principal */
 
   h2, p {
-    font-family: Roboto;
+    font-family: Amazon Ember;
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
