--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,44 +1,40 @@
-<div class ="footer">
- <div class="container">
-    <div class="footer-row">
-      <div class="footer-links">
-        <h2> Sobre nosotros</h2>
-        <p> <%= link_to "Quienes somos","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "¿Cómo funciona?","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "Reseñas sobre Lingua","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "Trabaja en Lingua","#", class: "nav-link" %>
-        </li></p>
+<div class="footer">
+  <div class="footer-container">
+    <div class="row" style="padding: 4px;">
+      <div class="col-md-4 footer-links">
+        <div class="links">
+          <h2>Sobre nosotros</h2>
+          <p><%= link_to "Quiénes somos", "#", class: "nav-link" %></p>
+          <p><%= link_to "¿Cómo funciona?", "#", class: "nav-link" %></p>
+          <p><%= link_to "Reseñas sobre Lingua", "#", class: "nav-link" %></p>
+          <p><%= link_to "Trabaja en Lingua", "#", class: "nav-link" %></p>
+        </div>
       </div>
-      <div class="footer-links">
-        <h2>Para estudiante</h2>
-        <p> <%= link_to "Blog de Lingua","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "Preguntas y respuestas","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "Descuento para estudiantes","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "Evalúa tu ingles","#", class: "nav-link" %>
-        </li></p>
+
+      <div class="col-md-4 footer-links">
+        <div class="links">
+          <h2>Para estudiantes</h2>
+          <p><%= link_to "Blog de Lingua", "#", class: "nav-link" %></p>
+          <p><%= link_to "Preguntas y respuestas", "#", class: "nav-link" %></p>
+          <p><%= link_to "Descuento para estudiantes", "#", class: "nav-link" %></p>
+          <p><%= link_to "Evalúa tu inglés", "#", class: "nav-link" %></p>
       </div>
-      <div class="footer-links">
-        <h2>Para Profesores</h2>
-        <p> <%= link_to "Conviértete en un profesor en linea","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "Enseñar ingles online","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "Enseñar francés online","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "Enseñar español online","#", class: "nav-link" %>
-        </li></p>
-        <p> <%= link_to "Enseñar otros idiomas","#", class: "nav-link" %>
-        </li></p>
+      </div>
+
+      <div class="col-md-4 footer-links">
+        <div class="links">
+          <h2>Para profesores</h2>
+          <p><%= link_to "Conviértete en un profesor en línea", "#", class: "nav-link" %></p>
+          <p><%= link_to "Enseñar inglés online", "#", class: "nav-link" %></p>
+          <p><%= link_to "Enseñar francés online", "#", class: "nav-link" %></p>
+          <p><%= link_to "Enseñar español online", "#", class: "nav-link" %></p>
+          <p><%= link_to "Enseñar otros idiomas", "#", class: "nav-link" %></p>
+        </div>
       </div>
     </div>
   </div>
   <div class="card-body">
-    <h5 class="card-title">Copyrights 2022 EDUCACIÓN GLOBAL</h5>
+    <h5>Copyrights 2022 EDUCACIÓN GLOBAL</h5>
   </div>
 </div>
+
