--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,82 +4,76 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: Roboto;
-}
-
-.container {
-  // max-width: 1200px;
-  margin: 0 auto;
-}
-
 .footer{
+  display: flex;
   background-color:#FFF;
-  padding: 80 px 0;
   height: 288px;
   padding-top: 48px;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
   flex-shrink: 0;
+
+  .footer-container .row{
+    width: 1440px;
+    .footer-links{
+      align-items:center;
+      justify-content: center;
+      align-content:center;
+      align-self: center;
+
+      .links{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+  
+        h2 {
+          color: var(--Texto-tandem, #575966);
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          padding-bottom: 10px;
+        }
+        p {
+          color: var(--Texto-tandem, #575966);
+          font-size: 13px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          display: flex;
+          margin-bottom: 15px;
+          transition: color 0.0s ease, padding-left 0.3s ease;
+
+        }
+        p:hover {
+          color: lightgreen;
+          padding-left: 6px;
+        }
+      }
+    }
+  }
+  
+
+
+  .card-body {
+    display: flex;
+    padding: 20px 0px;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    border-top: 1px solid var(--negro-20, rgba(0, 0, 0, 0.20));
+    background: #FFF;
+    width: 100%;
+
+    h5 {
+      color: var(--Texto-primaio, #393737);
+      font-family: Amazon Ember;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+  }
 }
 
-.footer-row {
-  display: flex;
-  flex-wrap: wrap;
-  display: flex;
-  width: 1440px;
-  padding: 20px 0px;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.footer-links {
-  width: 25%;
-  padding: 0 15px;
-}
-.footer-links h2 {
-  color: var(--Texto-tandem, #575966);
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  padding-bottom: 10px;
-}
-
-.footer-links p {
-  color: var(--Texto-tandem, #575966);
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  display: block;
-  margin-bottom: 15px;
-  transition: all .3s ease;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-.footer-links p:hover {
-  color: lightgreen;
-  padding-left: 6px;
-}
-
-.card-body {
-  display: flex;
-  padding: 20px 0px;
-  justify-content: center;
-  align-items: center;
-  align-self: stretch;
-  border-top: 1px solid var(--negro-20, rgba(0, 0, 0, 0.20));
-  background: #FFF;
-}
-
-.card-title {
-  color: var(--Texto-primaio, #393737);
-  font-family: Amazon Ember;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
