--- a/app/assets/stylesheets/components/perfil/_card_perfil.scss
+++ b/app/assets/stylesheets/components/perfil/_card_perfil.scss
@@ -16,7 +16,7 @@
     h4{
       flex: 1 0 0;
       color: var(--negro-50, rgba(0, 0, 0, 0.50));
-      font-family: Roboto;
+      font-family: Amazon Ember;
       font-size: 20px;
       font-weight: 600;
     }
@@ -24,7 +24,7 @@
       width: 45px;
       height: 16px;
       color: var(--Texto-verde, #62B242);
-      font-family: Roboto;
+      font-family: Amazon Ember;
       font-size: 12px;
       font-style: normal;
       font-weight: 400;
@@ -50,7 +50,7 @@
     margin: 0px;
     h4{
       color: var(--negro-50, rgba(0, 0, 0, 0.50));
-    font-family: Roboto;
+    font-family: Amazon Ember;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
@@ -58,7 +58,7 @@
     }
     p{
       color: var(--negro-50, rgba(0, 0, 0, 0.50));
-      font-family: Roboto;
+      font-family: Amazon Ember;
       font-size: 16px;
       font-style: normal;
       font-weight: 400;
