--- a/app/views/users/teachers.html.erb
+++ b/app/views/users/teachers.html.erb
@@ -1,75 +1,66 @@
-<div class="pilar">
-  <div class="container-search">
-  <nav class="navbar primer-container">
-    <div class="container segundo-container">
-      <%= link_to "Encuentra tu profesor", "#", class: "teacher-name" %>
-      <%= form_tag("#", method: "get", class: "d-flex", role: "search") do %>
-        <div class="navbar-collapse caja-search" id="navbarCollapse">
-          <%= text_field_tag "search", nil, class: "form-control segunda-caja", placeholder: "🔎 encuentra personas", aria: { label: "Search" } %>
-        </div>
-      <% end %>
-      <%= button_tag(class: "navbar-toggler filtro-search", id: "navbar-toggler") do %>
-        <span class="navbar-toggler-icon"></span>
-      <% end %>
-    </div>
-  </nav>
-</div>
-
-<% @teachers.each do |teacher| %>
-  <div class="container-cards">
-    <div class="custom-container card-containers">
-      <div class="custom-row d-flex">
-        <div class="custom-col-sm-6 custom-col-lg-8">
-          <%# <p>Contenido para col-sm-6 y col-lg-8</p> %>
-          <div class="card mb-3 card-ancha">
-            <div class="row g-0 ancho-uno">
-              <div class="col-md-4">
-                <% if teacher.profile_photo.present? %>
-                  <%= image_tag teacher.profile_photo, class: "card-img-top", alt: "foto de perfil del teacher" %>
-                <% else %>
-                  <%= image_tag 'gatito.jpg', class: "card-img-top", alt: "Foto por defecto" %>
-                <% end %>
+<div class="page-content">
+  <div class="body-community">
+    <div class="pilar">
+      <div class="container-search">
+        <nav class="navbar primer-container">
+          <div class="container segundo-container">
+            <%= link_to "Encuentra tu profesor", "#", class: "teacher-name" %>
+            <%= form_tag("#", method: "get", class: "d-flex", role: "search") do %>
+              <div class="navbar-collapse caja-search" id="navbarCollapse">
+                <%= text_field_tag "search", nil, class: "form-control segunda-caja", placeholder: "🔎 encuentra personas", aria: { label: "Search" } %>
               </div>
-              <div class="col-md-8">
-                <div class="card-body body-card">
-                  <div class="container-text text-container">
-                    <h2 class="text-start titulo-principal"> <%= teacher.first_name %></h2>
-                    <p class="text-start"><%= teacher.data_teacher.teaching_languages%></p>
-                    <p class="text-start">ℹ️Certificado TEFL/TESOL</p>
-                    <p class="text-start"><%= teacher.data_teacher.teacher_description%></p>
-                    <p class="text-start">💲<%= teacher.data_teacher.usd_per_hour  %> Clases de 60 minutos</p>
-                    <p class="text-start"><%= teacher.about_me %></p>
-                  </div>
+            <% end %>
+            <%= button_tag(class: "navbar-toggler filtro-search", id: "navbar-toggler") do %>
+              <span class="navbar-toggler-icon"></span>
+            <% end %>
+          </div>
+        </nav>
+      </div>
+
+      <% @teachers.each do |teacher| %>
+        <div class="card-containerss">
+          <div class="card-teacher">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-image">
+                  <% if teacher.profile_photo.present? %>
+                    <%= image_tag teacher.profile_photo, class: "card-img-top", alt: "foto de perfil del teacher" %>
+                  <% else %>
+                    <%= image_tag 'gatito.jpg', class: "card-img-top", alt: "Foto por defecto" %>
+                  <% end %>
+                </div>
+                <div class="card-info">
+                  <h2><%= teacher.first_name %></h2>
+                  <p><%= teacher.data_teacher.teaching_languages %></p>
+                  <p>ℹ️Certificado TEFL/TESOL</p>
+                  <p><%= teacher.data_teacher.teacher_description %></p>
+                  <p>💲<%= teacher.data_teacher.usd_per_hour %> Clases de 60 minutos</p>
+                  <p><%= teacher.about_me %></p>
                 </div>
               </div>
+
+              <div class="card-futer">
+                <p><%= teacher.native_language %></p>
+                <p>intermedio</p>
+                <p>👩‍💻estudiantes activos</p>
+                <p>📹clases impartidas</p>
+                <p>⭐⭐⭐⭐⭐Reseña"</p>
+              </div>
             </div>
-          </div>
-          <div class="pequeño-container">
-            <p><%= teacher.native_language %></p>
-            <p><%= link_to "intermedio", "#", class: "links-dashboard" %></p>
-            <p><%= link_to "👩‍💻estudiantes activos", "#", class: "links-dashboard" %></p>
-            <p><%= link_to "📹clases impartidas", "#", class: "links-dashboard" %></p>
-            <p><%= link_to "⭐⭐⭐⭐⭐Reseña", "#", class: "links-dashboard" %></p>
 
-          </div>
-
-        </div>
-        <div class="custom-col-6 custom-col-lg-4 card-chica-grande">
-          <%# <p>Contenido para col-6 y col-lg-4</p> %>
-          <div class="card card-chica" style="width: 17rem;">
-            <% if teacher.profile_photo.present? %>
-              <%= image_tag teacher.profile_photo, class: "card-img-top", alt: "foto de perfil del teacher" %>
-            <% else %>
-              <%= image_tag 'gatito.jpg', class: "card-img-top", alt: "Foto por defecto" %>
-            <% end %>
-            <div class="card-body botones-pequeños">
-              <%= link_to "Reserva", "#", class: "btn btn-light" %>
-              <%= link_to "Mensaje", "#", class: "btn btn-light" %>
+            <div class="col-md-4 container-video">
+              <div class="card-video">
+                <!-- Reemplaza el enlace del video con tu propio enlace de YouTube -->
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/kVpv8-5XWOI" frameborder="0" allowfullscreen class="video"></iframe>
+              </div>
+              <div class="botton-seccion">
+                <%= link_to "Reserva", "#", class: "btn btn-light" %>
+                <%= link_to "Mensaje", "#", class: "btn btn-light" %>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      <% end %>
     </div>
   </div>
-<% end  %>
-
+</div>
