--- a/app/views/users/teachers.html.erb
+++ b/app/views/users/teachers.html.erb
@@ -41,7 +41,7 @@
 
               <div class="card-futer">
                 <p><%= teacher.native_language %></p>
-                <p>intermedio</p>
+                <p>intermediosssss</p>
                 <p>👩‍💻estudiantes activos</p>
                 <p>📹clases impartidas</p>
                 <p>⭐⭐⭐⭐⭐Reseña"</p>
