--- a/app/views/chatrooms/_chatrooms.html.erb
+++ b/app/views/chatrooms/_chatrooms.html.erb
@@ -1,4 +1,6 @@
 <div>
-  <%#= link_to chatroom.name, chatroom_path %>
   <p>card _chatrooms</p>
+  <% @chatrooms.each do |chatroom|  %>
+    <%= link_to "#{chatroom.name}", chatroom_path(chatroom) %>
+  <% end %>
 </div>
