mejora en scope :involving y adición de scope :between, además mejora SQL query de @chatrooms perteneciente a ChatroomsController # index

--- a/app/views/users/_users_chatroom.html.erb
+++ b/app/views/users/_users_chatroom.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <p>card _users_chatroom</p>
+  <p>_users_list</p>
   <% @users.each do |user| %>
     <%= link_to "#{user.first_name} #{user.last_name}", user_path(user) %>
   <% end %>
