--- a/app/views/chatrooms/_chatrooms.html.erb
+++ b/app/views/chatrooms/_chatrooms.html.erb
@@ -1,6 +1,6 @@
-<div>
-  <p>card _chatrooms</p>
-  <% @chatrooms.each do |chatroom|  %>
+<div class="container">
+  <p>_chatrooms_list</p>
+  <% @chatrooms.each do |chatroom| %>
     <%= link_to "#{chatroom.name}", chatroom_path(chatroom) %>
   <% end %>
 </div>
