--- a/app/assets/stylesheets/components/devise/_login.scss
+++ b/app/assets/stylesheets/components/devise/_login.scss
@@ -1,33 +1,32 @@
 .container-login{
-  height: 100%;
-  margin-left: 44%;
-  margin-top: 20%;
+  margin-left: 33%;
+  margin-top: 7%;
+  margin-bottom: 10%;
+  max-width: 836px;
 }
 .login-principal{
   color: white;
-  font-size: 39px;
+  font-size: 30px;
   font-family:'Montserrat', sans-serif;
-  // margin-left: 34%;
-  margin-top: 20%;
   font-weight: 1000;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  margin-left: 13%;
+  margin-left: 60px;
 }
 .links-de-redes{
-  max-width: 39%;
-  background-color: white;
+  max-width: 58%;
+  background-color:white;
   border-radius: 10px;
   margin-top: 35px;
   margin-bottom: 41px;
-  margin-left: 7%;
+  // margin-left: 13%;
+  height: 33px;
 }
 .social-link{
   text-decoration: none;
-  color: black;
-  font-size: 13px;
+  color:#575966;
+  font-size: 16px;
   margin-left: 31%;
   font-family: 'Times New Roman', Times, serif;
-
 }
 // arreglo
 .social-link i {
