--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -19,3 +19,4 @@
 @import "booking/booking-button";
 @import "user/card_teacher";
 @import "booking/bookings";
+// @import "flatpickr/dist/flatpickr.css";
