--- a/app/assets/stylesheets/components/devise/_login.scss
+++ b/app/assets/stylesheets/components/devise/_login.scss
@@ -18,7 +18,6 @@
   border-radius: 10px;
   margin-top: 35px;
   margin-bottom: 41px;
-  // margin-left: 13%;
   height: 33px;
 }
 .social-link{
@@ -28,7 +27,6 @@
   margin-left: 31%;
   font-family: 'Times New Roman', Times, serif;
 }
-// arreglo
 .social-link i {
   margin-left: -20px;
 }
@@ -37,13 +35,7 @@
   border-radius:10px ;
   font-size: 20px;
   font-family:'Montserrat', sans-serif;
-  // color: red !important;
   color: white;
-
-  .preguntas{
-    border-radius: 10px;
-    text-align: center;
-  }
 }
 
 .preguntas input[type="email"],
@@ -51,13 +43,30 @@
   width: 100%;
   margin-bottom: 10px;
   padding: 6px;
-  border-radius: 10px;
+  border: none;
+  border-bottom: 1px solid black;
+  outline: none;
+  margin-left: 32px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+
+}
+.remenber{
+ font-size: 15px;
+ margin-left: 67%;
 }
 .form-actions{
-  margin-left: 262px;
+  margin-left: 25px;
   background-color:#39B54A;
-  width: 172px;
-  border-radius: 10px;
+  max-width: 50%;
   font-size: 10px;
   color:white;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 10px;
+}
+.shared-links{
+  white-space: nowrap;
+  margin-left: 108px;
+  margin-top: 15px;
 }
