--- a/app/views/users/_card_perfil.html.erb
+++ b/app/views/users/_card_perfil.html.erb
@@ -1,6 +1,7 @@
 <%= link_to "Mensaje", "#", class: "booking-button" %>
 <% if @user.teacher? %>
   <%= link_to "Reserva tu clase", new_booking_path, class: "booking-button" %>
+  <%#= link_to "Reserva tu clase", new_booking_path(teacher_name: "#{@user.first_name} #{@user.last_name}"), class: "booking-button" %>
 <% end %>
 
 <div class="row">
